fixed phone number issue, changed top header layout on mobile and larger

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,7 +98,7 @@ button:disabled {
   @apply mt-10 md:mt-0 py-2 px-3 rounded flex items-center border-2 bg-regBlue border-gray-100 hover:bg-darkBlue}
 
 .cart-button {
-  @apply mb-6 md:mb-0 py-2 px-3 rounded flex items-center border-2 bg-regBlue border-gray-100 hover:bg-darkBlue}
+  @apply py-2 px-3 rounded flex items-center border-2 bg-regBlue border-gray-100 hover:bg-darkBlue}
 
 .register-button {
   @apply py-2 px-3 rounded flex items-center border-2 border-gray-100 hover:bg-[#216DAB]
